--- a/utils/packages.tex
+++ b/utils/packages.tex
@@ -4,7 +4,7 @@
 \usepackage[english]{babel}
 \usepackage{graphicx} %figures 
 \usepackage{csquotes} %recommended package with bib LaTeX
-% \usepackage[style=alphabetic, sorting=ynt]{biblatex} 
+\usepackage[style=alphabetic, sorting=ynt]{biblatex} 
 \usepackage{faktor} %nicer quotient 
 \usepackage{tabularx} %fancy tables
 \usepackage{stmaryrd} % lightning symbol 
