--- a/ref.bib
+++ b/ref.bib
@@ -1,30 +1,14 @@
-@Comment @article{guth,
-@Comment 	doi = {10.1017/s0305004115000468},
-@Comment 	year = {2015},
-@Comment 	month = {sep},
 
-@Comment 	publisher = {Cambridge University Press ({CUP})},
-
-@Comment 	volume = {159},
-
-@Comment 	number = {3},
-
-@Comment 	pages = {459--469},
-
-@Comment 	author = {LARRY GUTH},
-
-@Comment 	title = {Polynomial partitioning for a set of varieties},
-
-@Comment 	journal = {Mathematical Proceedings of the Cambridge Philosophical Society}
-@Comment }
-
-@article{guth,
-  title={Literate Programming},
-  author={Donald E. Knuth},
-  journal={The Computer Journal},
-  volume={27},
-  number={2},
-  pages={97--111},
-  year={1984},
-  publisher={Oxford University Press}
+@article{guth_polynomial_2015,
+	title = {Polynomial partitioning for a set of varieties},
+	volume = {159},
+	issn = {1469-8064},
+	url = {https://www.cambridge.org/core/article/polynomial-partitioning-for-a-set-of-varieties/B08DFD805D87171996967C28A3ACA304},
+	doi = {10.1017/S0305004115000468},
+	abstract = {Given a set Γ of low-degree k-dimensional varieties in \${\textbackslash}mathbb\{R\}\$n, we prove that for any D ⩾ 1, there is a non-zero polynomial P of degree at most D so that each component of \${\textbackslash}mathbb\{R\}\$n{\textbackslash}Z(P) intersects O(Dk−n{\textbar}Γ{\textbar}) varieties of Γ.},
+	pages = {459--469},
+	number = {3},
+	journaltitle = {Mathematical Proceedings of the Cambridge Philosophical Society},
+	author = {{GUTH}, {LARRY}},
+	date = {2015},
 }
