--- a/utils/packages.tex
+++ b/utils/packages.tex
@@ -2,13 +2,14 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage[english]{babel}
-\usepackage{graphicx} %figures 
+\usepackage{graphicx} %figures
 \usepackage{csquotes} %recommended package with bib LaTeX
-\usepackage[style=alphabetic, sorting=ynt]{biblatex} 
-\usepackage{faktor} %nicer quotient 
+\usepackage[style=alphabetic, sorting=ynt]{biblatex}
+\usepackage{faktor} %nicer quotient
 \usepackage{tabularx} %fancy tables
-\usepackage{stmaryrd} % lightning symbol 
+\usepackage{stmaryrd} % lightning symbol
 \usepackage{subcaption} % multiple figures in the same picture
 \usepackage{hyperref} % nicer hyperlinks in the text
 \usepackage{bbm} %mathbbm 1 command
 \usepackage{enumerate} %stylizing enumerate
+\usepackage{diagbox} %diagonal line in table
