--- a/grunbaum_historical.tex
+++ b/grunbaum_historical.tex
@@ -12,8 +12,8 @@
 \graphicspath{{./figs/}}
 
 \section{Notation}
-Test
 \begin{itemize}
+\item Given two vectors $x, y$ of dimension $d$,  their scalar product is $\scalar{x}{y}:=\sum_{i=1}^d x_iy_i$.
 \item $G=\bbZ_2\times\bbZ_2$ with elements $\nu_1, \nu_2$ and $\nu_1\nu_2 = \nu_2\nu_1$.
   \item Given a set of elements $S$ in an object $A$ (group elements in a group, vectors in a vector space, etc.), by $\langle S\rangle\subseteq A$ we denote the generated object (group, vector subspace, etc.).
   \item Given a normed vector space $V$, $S(V)$ will denote its sphere
