--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,4 @@
+
 @article{guth_polynomial_2015,
 	title = {Polynomial partitioning for a set of varieties},
 	volume = {159},
@@ -10,4 +11,18 @@
 	journaltitle = {Mathematical Proceedings of the Cambridge Philosophical Society},
 	author = {{GUTH}, {LARRY}},
 	date = {2015},
+}
+
+@book{matousek_using_2008,
+	location = {Berlin, Heidelberg},
+	title = {Using the Borsuk–Ulam Theorem},
+	isbn = {978-3-540-00362-5 978-3-540-76649-0},
+	url = {http://link.springer.com/10.1007/978-3-540-76649-0},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Matoušek, Jiří},
+	urldate = {2023-06-22},
+	date = {2008},
+	langid = {english},
+	doi = {10.1007/978-3-540-76649-0},
+	file = {Submitted Version:C\:\\Users\\giant\\Zotero\\storage\\LU3M55FS\\Matoušek - 2008 - Using the Borsuk–Ulam Theorem.pdf:application/pdf},
 }
