Small notational fixes

--- a/grunbaum.tex
+++ b/grunbaum.tex
@@ -81,6 +81,7 @@ Our goal is to prove the following result:
   Define $H_i(v) = (h_i(v), a_i(v))$ to be the affine (oriented) span of $l_i(v)$ and $z$, the two planes now equipartition the measure $\mu$ and have the desired intersection.
 
   Let now $\bbZ_4 = \gen{g_1}$ act on $S^1$ by $\frac{\pi}{2}$ rotation counter clockwise. Then, by construction we have that:
+  
   \[
     H_0(g_1\cdot v) = H_1(v)
   \]
@@ -182,6 +183,8 @@ Our goal is to prove the following result:
     } P
   \]
 
+  \vskip 1em
+  
   As a result, the map $A:S^{n-1} \rightarrow S^{n-1}$ is homotopic to the identity through the homotopy $H:S^{n-1} \times \left[0,1\right]\rightarrow S^{n-1}$;
   $H(x, t) = \gamma(1-t)x$.
 
